[project]
name = "meta-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "williamdennis", email = "william.dennis@auroraer.com" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "torch>=2.0.0",
    "maturin>=1.10.2",
]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "sa_rust"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
