[package]
name = "sa_rust"
version = "0.1.0"
edition = "2021"
description = "Simulated Annealing Rust extension for meta-learning"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[lib]
name = "sa_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module"] }
rand = "0.8"
rand_chacha = "0.3"
rand_distr = "0.4"

[build-dependencies]

[package.metadata.maturin]
python-source = "sa_rust"
