[package]
name = "sa_rust"
version = "0.1.0"
edition = "2021"
description = "Simulated Annealing Rust extension for meta-learning"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[lib]
name = "sa_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module"] }

[build-dependencies]

[package.metadata.maturin]
python-source = "sa_rust"
